# regioncam

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
examples/: Torch toy example.ipynb  example.rs  large_random_mlp.rs
regioncam/: Cargo.toml
regioncam-python/: Cargo.toml  README.md  pyproject.toml
regioncam-python/src/: lib.rs
regioncam/src/: lib.rs  partition.rs  svg.rs  util.rs
src/: lib.rs  nn.rs  partition.rs  plane.rs  python_wrapper.rs  regioncam.rs  regioncam1d.rs  render.rs  svg.rs  util.rs
test/: error_case_2.npz
