[workspace]
resolver = "2"
members = [
    "regioncam",
    "regioncam-python"
]

[workspace.package]
version = "0.1.1"
authors = ["Twan van Laarhoven <twanvl@gmail.com>"]
description = "Visualize linear regions in neural networks"

[profile.release-with-debug]
inherits = "release"
debug = true

#[[bench]]
#name="random_mlp"
#harness=false
