[package]
name = "regioncam"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[workspace.package]
version = "0.3.0"
authors = ["Twan van Laarhoven <twanvl@gmail.com>"]
description = "Visualize linear regions in neural networks"

[workspace]
members = [
    "regioncam-python"
]

[lib]
name = "regioncam"

[dependencies]
approx = "0.5.1"
colorgrad = "0.7.0"
ndarray = { version = "0.16.1", features = ["approx"] }
num-traits = "0.2.19"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
svg_fmt = "0.4.4"

[profile.release-with-debug]
inherits = "release"
debug = true
