[package]
name = "regioncam-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "regioncam" # has to match python module name
crate-type = ["cdylib"]

[dependencies]
numpy = "0.23.0"
pyo3 = { version = "0.23.4", features = ["abi3-py38","extension-module"] }
regioncam = { path = "../regioncam" }
