[package]
name = "regioncam-python"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[lib]
name = "regioncam" # has to match python module name
crate-type = ["cdylib"]

[dependencies]
numpy = "0.23.0"
pyo3 = { version = "0.23.4", features = ["abi3-py310","extension-module"] }
regioncam = { path = "../regioncam" }
