[package]
name = "regioncam-python"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[lib]
name = "regioncam" # has to match python module name
crate-type = ["cdylib"]

[features]
default = ["svg", "png", "repr_png"]
png = ["regioncam/tiny-skia", "dep:png"]
svg = ["regioncam/svg"]
repr_png = ["png"]
repr_svg = ["svg"]

[dependencies]
numpy = "0.23.0"
pyo3 = { version = "0.23.4", features = ["abi3-py310","extension-module","multiple-pymethods"] }
regioncam = { path = ".." }
png = { version = "0.17", optional = true }
