[package]
name = "regioncam"
version = "0.1.0"
edition = "2021"

[lib]
name = "regioncam"

[dependencies]
approx = "0.5.1"
colorgrad = "0.7.0"
ndarray = { version = "0.16.1", features = ["approx"] }
num-traits = "0.2.19"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
svg_fmt = "0.4.4"
